--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.3.4",
     "exif-js": "^2.3.0",
+    "exifr": "^7.1.3",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "react": "^18.2.0",
